"""Session model to store partially-collected vacation state so a user/agent can resume."""
import uuid
from typing import Any, Dict, Optional
from datetime import datetime, timezone, timedelta

from sqlalchemy import Column, Enum, Float, String, DateTime, ForeignKey, JSON, Boolean, Integer, Table, Text
from sqlalchemy.sql import func
from sqlalchemy.orm import relationship
from app.core.database import Base
import enum
from app.core.config import settings

class SessionStage(str, enum.Enum):
    DISCOVERY = "discovery"
    OPTIONS = "options"
    ITINERARY = "itinerary"
    BOOKING = "booking"
    COMPLETED = "completed"

def get_expiry_date():
    """Helper to calculate the expiry date 30 days from now."""
    return datetime.now(timezone.utc).replace(tzinfo=None) + timedelta(days=settings.SESSION_EXPIRY_DAYS)

vacation_companions = Table(
    "vacation_companions",
    Base.metadata,
    Column("vacation_session_id", Integer, ForeignKey("vacation_sessions.id", ondelete="CASCADE"), primary_key=True),
    Column("companion_id", String, ForeignKey("travel_companions.id", ondelete="CASCADE"), primary_key=True)
)

class VacationSession(Base):
    __tablename__ = "vacation_sessions"

    id = Column(Integer, primary_key=True, index=True, autoincrement=True)
    user_id = Column(String, ForeignKey("users.id", ondelete="CASCADE"), nullable=False, index=True)

    current_stage = Column(Enum(SessionStage), default=SessionStage.DISCOVERY, nullable=False)

    currency = Column(String, nullable=True, default="EUR")
    from_date = Column(DateTime, nullable=True)
    to_date = Column(DateTime, nullable=True)
    departure = Column(String, nullable=True)
    destination = Column(String, nullable=True)
    adults = Column(Integer, nullable=True, default=1)
    children = Column(Integer, nullable=True, default=0)
    infants_in_seat = Column(Integer, nullable=True, default=0)
    infants_on_lap = Column(Integer, nullable=True, default=0)
    children_ages = Column(String, nullable=True)
    room_qty = Column(Integer, nullable=True, default=1)
    budget = Column(Integer, nullable=True)

    destination_arrival = Column(DateTime(timezone=False), nullable=True)
    destination_departure = Column(DateTime(timezone=False), nullable=True)

    flights_url = Column(Text, nullable=True)
    flight_price = Column(Float, nullable=True)
    flight_ccy = Column(String, nullable=True)
    airport_latitude = Column(Float, nullable=True)
    airport_longitude = Column(Float, nullable=True)
    airport_name = Column(String, nullable=True)
    accommodation_url = Column(Text, nullable=True)
    accommodation_price = Column(Float, nullable=True)
    accommodation_ccy = Column(String, nullable=True)
    accommodation_latitude = Column(Float, nullable=True)
    accommodation_longitude = Column(Float, nullable=True)
    accommodation_address = Column(String, nullable=True)
    accommodation_name = Column(String, nullable=True)

    is_active = Column(Boolean, default=True, nullable=False)
    
    created_at = Column(DateTime, server_default=func.now(), nullable=False)
    
    updated_at = Column(DateTime, onupdate=lambda: datetime.now(timezone.utc).replace(tzinfo=None), nullable=True)
    
    expires_at = Column(
        DateTime, 
        default=get_expiry_date,
        onupdate=get_expiry_date, 
        nullable=True
    )

    user = relationship("User", back_populates="sessions", lazy="joined")

    companions = relationship(
        "TravelCompanion", 
        secondary=vacation_companions, 
        back_populates="sessions",
        lazy="selectin" 
    )
    
    def __repr__(self):
        return f"<VacationSession id={self.id} user_id={self.user_id}>"
    